// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders with "connected" styling 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  gap: 33px;
}

.emotion-0 h2,
.emotion-0 h3,
.emotion-0 h4 {
  margin-top: 4px;
}

.emotion-0:not(:last-child):before {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
}

.dark-theme .emotion-0:not(:last-child):before {
  border-left-color: #5C6C75;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  position: relative;
  min-height: 59px;
}

.emotion-3 {
  position: relative;
  font-weight: bold;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.dark-theme .emotion-3 {
  background-color: #00684A;
  color: #E8EDEB;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-5 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-5 {
    padding-bottom: 32px;
  }
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3 emotion-4"
      >
        1
      </div>
    </div>
    <div
      class="emotion-5 emotion-6"
    >
      <p
        class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
        data-display="p"
      >
        Import data from CSV or JSON files into your MongoDB database.
      </p>
      <p
        class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
        data-display="p"
      >
        <a
          class="link"
          href="/import-export/#std-label-compass-import-export"
        >
          To learn more, see Import and Export Data
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders with "connected" styling by default 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  gap: 33px;
}

.emotion-0 h2,
.emotion-0 h3,
.emotion-0 h4 {
  margin-top: 4px;
}

.emotion-0:not(:last-child):before {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
}

.dark-theme .emotion-0:not(:last-child):before {
  border-left-color: #5C6C75;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  position: relative;
  min-height: 59px;
}

.emotion-3 {
  position: relative;
  font-weight: bold;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.dark-theme .emotion-3 {
  background-color: #00684A;
  color: #E8EDEB;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-5 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-5 {
    padding-bottom: 32px;
  }
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3 emotion-4"
      >
        1
      </div>
    </div>
    <div
      class="emotion-5 emotion-6"
    >
      <p
        class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
        data-display="p"
      >
        Import data from CSV or JSON files into your MongoDB database.
      </p>
      <p
        class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
        data-display="p"
      >
        <a
          class="link"
          href="/import-export/#std-label-compass-import-export"
        >
          To learn more, see Import and Export Data
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders with "normal" or YAML steps styling 1`] = `
<DocumentFragment>
  .emotion-0 {
  gap: 16px;
}

.emotion-0 h2,
.emotion-0 h4,
.emotion-0 h5,
.emotion-0 h6 {
  margin-top: unset;
}

.emotion-0 h3 {
  margin-top: 2px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  position: relative;
  min-height: 59px;
}

.emotion-3 {
  border: 1.5px solid #C1C7C6;
  font-weight: 500;
  font-size: 16px;
  line-height: 28px;
  background-color: inherit;
  color: var(--opposite-color);
  height: 27px;
  width: 27px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 section>*,
.emotion-5 ol p,
.emotion-5 ul p {
  margin-bottom: 16px;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3 emotion-4"
      >
        1
      </div>
    </div>
    <div
      class="emotion-5 emotion-6"
    >
      <p
        class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
        data-display="p"
      >
        Import data from CSV or JSON files into your MongoDB database.
      </p>
      <p
        class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
        data-display="p"
      >
        <a
          class="link"
          href="/import-export/#std-label-compass-import-export"
        >
          To learn more, see Import and Export Data
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;
